# Fluent2D

./: CMakeLists.txt  README.md  conanfile.txt
src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/Core/Log/: Log.h
src/Core/Result/: Result.h
src/DisplayManager/: BaseOperator.h  DisplayManager.cpp  DisplayManager.h  GraphicWidget.cpp  GraphicWidget.h
src/Model/Entity/: Component.h  Entity.h
src/Model/EntityFW/: Component.h  Entity.h  EntityIdPool.h  EntityManager.h
src/Model/GeomComponent/: Circle.cpp  GeomComponent.h  Rect.cpp  Rect.h  Shape.h  Triangle.h
src/Model/Shape/: Circle.h
src/Operator/: CADOperator.h  CADOperatorMgr.cpp  CADOperatorMgr.h  CircleOperator.cpp  CircleOperator.h  RectOperator.cpp  RectOperator.h  TriangleOperator.cpp  TriangleOperator.h
